nvidia-drm: grab headers from /usr/src instead of /sys
This prevents having to do a full installworld to compile with the
proper BSD version being detected

--- a/nvidia/src/nvidia-drm/Makefile
+++ b/nvidia/src/nvidia-drm/Makefile
@@ -93,7 +93,7 @@ DRMKMODDIR ?= ${HOME}/git/drm-kmod
 NV_CONFTEST_CFLAGS = \
         -I${DRMKMODDIR}/linuxkpi/bsd/include \
         -I${DRMKMODDIR}/linuxkpi/gplv2/include/ \
-        -I${SYSDIR}/compat/linuxkpi/common/include/ \
+        -I${BSDSRCTOP}/sys/compat/linuxkpi/common/include/ \
         -I${DRMKMODDIR}/linuxkpi/dummy/include/ \
         -I${BSDSRCTOP}/sys/compat/linuxkpi/dummy/include/ \
         -I${DRMKMODDIR}/include/ \
